# otus-print-ip

./: CMakeLists.txt  Doxyfile  README.md  generator.h  index.html  main.cpp  print_ip.h  test_print_ip.cpp
.github/workflows/: main.yml
docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  generator_8h.html  generator_8h__dep__incl.map  generator_8h__dep__incl.md5  generator_8h__incl.map  generator_8h__incl.md5  generator_8h_source.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherits.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  md__r_e_a_d_m_e.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaceprint__ip__ns.html  namespaceprint__ip__ns_1_1print__ip__helpers.html  namespaces.html  pages.html  print__ip_8h.html  print__ip_8h__dep__incl.map  print__ip_8h__dep__incl.md5  (+14 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
